--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,9 +3,16 @@ $colour-primary: #55c57a;
 $colour-primary-light:  #7ed56f;
 $colour-primary-dark:  #28b485;
 
+$colour-secondary-light: #ffb900;
+$colour-secondary-dark: #ff7730;
+
+$colour-tertiary-light: #2998ff;
+$colour-tertiary-dark: #5643fa;
+
 $colour-black: #000;
 $colour-grey-dark: #777;
 $colour-grey-light-1: #f7f7f7;
+$colour-grey-light-2: #eee;
 $colour-white: #fff;
 
 // Font
