--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -48,6 +48,15 @@
         }
     }
 
+    &--green {
+        background-color: $colour-primary;
+        color: $colour-white;
+
+        &::after {
+            background-color: $colour-white;
+        }
+    }
+
     &--animated {
         animation: moveInBottom .5s ease-out .75s;
         animation-fill-mode: backwards;
