--- a/sass/page/_home.scss
+++ b/sass/page/_home.scss
@@ -11,10 +11,17 @@
         rgba($colour-primary-dark, 0.8)), 
     url("../img/nat-4.jpg");
     background-size: cover;
+    margin-top: -10rem;
     padding: 20rem 0;
-    transform: skewY(-7deg) translateY(-10rem);
+    transform: skewY(-7deg);
 
     & > * {
         transform: skewY(7deg);
     }
+}
+
+.section-tours {
+    background-color: $colour-grey-light-1;
+    margin-top: -10rem;
+    padding: 25rem 0 15rem 0;
 }
