Added bookings section

--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,6 +1,6 @@
 .story {
     background-color: rgba($colour-white, .6);
-    border-radius: 3px;
+    border-radius: $default-border-radius;
     box-shadow: 0 3rem 6rem rgba($colour-black, .1);
     font-size: $default-font-size;
     margin: 0 auto;
