--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,7 +10,8 @@ $colour-tertiary-light: #2998ff;
 $colour-tertiary-dark: #5643fa;
 
 $colour-black: #000;
-$colour-grey-dark: #777;
+$colour-grey-dark-1: #777;
+$colour-grey-dark-2: #999;
 $colour-grey-light-1: #f7f7f7;
 $colour-grey-light-2: #eee;
 $colour-white: #fff;
@@ -22,3 +23,6 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-horizontal: 6rem;
 $gutter-vertical: 8rem;
+
+// Misc
+$default-border-radius: 3px;
