--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    color: $colour-grey-dark;
+    color: $colour-grey-dark-1;
     font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7;
