--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         border-radius: 10rem;
@@ -9,6 +10,10 @@
         text-decoration: none;
         text-transform: uppercase;
         transition: all .2s;
+
+        // Change for the button <element>
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -21,7 +26,8 @@
         }
     }
 
-    &:active {
+    &:active,
+    &:focus {
         box-shadow: 0 .5rem 1rem rgba($colour-black, .2);
         transform: translateY(-.1rem);
     }
@@ -41,7 +47,7 @@
 
     &--white {
         background-color: $colour-white;
-        color: $colour-grey-dark;
+        color: $colour-grey-dark-1;
 
         &::after {
             background-color: $colour-white;
@@ -53,7 +59,7 @@
         color: $colour-white;
 
         &::after {
-            background-color: $colour-white;
+            background-color: $colour-primary;
         }
     }
 
