--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -7,7 +7,7 @@
 
     &__side {
         backface-visibility: hidden;
-        border-radius: 3px;
+        border-radius: $default-border-radius;
         box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
         height: 52rem;
         left: 0;
@@ -50,8 +50,8 @@
     &__picture {
         background-blend-mode: screen;
         background-size: cover;
-        border-top-left-radius: 3px;
-        border-top-right-radius: 3px;
+        border-top-left-radius: $default-border-radius;
+        border-top-right-radius: $default-border-radius;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
         height: 23rem;
