--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -1,6 +1,6 @@
 .feature-box {
     background-color: rgba($colour-white, .8);
-    border-radius: 3px;
+    border-radius: $default-border-radius;
     box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
     font-size: 1.5rem;
     padding: 2.5rem;
