--- a/sass/page/_home.scss
+++ b/sass/page/_home.scss
@@ -30,3 +30,26 @@
     padding: 15rem 0;
     position: relative;
 }
+
+.section-book {
+    background-image: linear-gradient(to right bottom, $colour-primary-light, $colour-primary-dark);
+    padding: 15rem;
+}
+
+.book {
+    background-image: linear-gradient(105deg, 
+                            rgba($colour-white, .9) 0%, 
+                            rgba($colour-white, .9) 50%, 
+                            transparent 50%),
+    url(../img/nat-10.jpg);
+    background-size: cover;
+    border-radius: $default-border-radius;
+    box-shadow: 0 1.5rem 4rem rgba($colour-black, .2);
+    
+    height: 50rem;
+
+    &__form {
+        padding: 6rem;
+        width: 50%;
+    }
+}
