--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $colour-tertiary-dark: #5643fa;
 $colour-black: #000;
 $colour-grey-dark-1: #777;
 $colour-grey-dark-2: #999;
+$colour-grey-dark-3: #333;
 $colour-grey-light-1: #f7f7f7;
 $colour-grey-light-2: #eee;
 $colour-white: #fff;
