--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -81,16 +81,13 @@
         width: 3.1rem;
 
         &::after {
+            @include absCenter;
             background-color: $colour-primary;
             border-radius: 50%;
             content: "";
             display: block;
             height: 1.3rem;
-            left: 50%;
             opacity: 0;
-            position: absolute;
-            top: 50%;
-            transform: translate(-50%, -50%);
             transition: opacity .2s;
             width: 1.3rem;
         }
