--- a/css/style.css
+++ b/css/style.css
@@ -270,9 +270,9 @@ body {
   .card__cta {
     left: 50%;
     position: absolute;
-    text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
     width: 90%; }
   .card__price-box {
     color: #fff;
@@ -393,18 +393,84 @@ body {
   top: -.4rem;
   width: 3.1rem; }
   .form__radio-button::after {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
     background-color: #55c57a;
     border-radius: 50%;
     content: "";
     display: block;
     height: 1.3rem;
-    left: 50%;
     opacity: 0;
+    transition: opacity .2s;
+    width: 1.3rem; }
+
+.popup {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100vh;
+  left: 0;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  transition: all .3s;
+  visibility: hidden;
+  width: 100%;
+  z-index: 9999; }
+  .popup__content {
+    left: 50%;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    transition: opacity .2s;
-    width: 1.3rem; }
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    display: table;
+    opacity: 0;
+    overflow: hidden;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all .5s .2s;
+    width: 75%; }
+  .popup__left {
+    display: table-cell;
+    width: 33.333333%; }
+  .popup__right {
+    display: table-cell;
+    padding: 3rem 5rem;
+    vertical-align: middle;
+    width: 66.666667%; }
+  .popup__imgage {
+    display: block;
+    width: 100%; }
+  .popup__text {
+    -webkit-column-count: 2;
+    -webkit-column-gap: 4rem;
+    -webkit-column-rule: 1px solid #eee;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eee;
+    font-size: 1.4rem;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+    margin-bottom: 4rem; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    display: inline-block;
+    color: #777;
+    font-size: 3rem;
+    line-height: 1;
+    position: absolute;
+    right: 2.5rem;
+    text-decoration: none;
+    top: 2.5rem;
+    transition: all .2s; }
+  .popup__close:hover {
+    color: #55c57a; }
 
 .story {
   background-color: rgba(255, 255, 255, 0.6);
@@ -435,15 +501,16 @@ body {
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
     backface-visibility: hidden;
     color: #fff;
     font-size: 1.7rem;
-    left: 50%;
     opacity: 0;
-    position: absolute;
     text-align: center;
     text-transform: uppercase;
-    top: 50%;
     transform: translate(-50%, 20%);
     transition: all .5s; }
   .story:hover .story__caption {
@@ -534,9 +601,10 @@ body {
   .header__text-box {
     left: 50%;
     position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
-    top: 40%;
-    transform: translate(-50%, -50%); }
+    top: 40%; }
 
 .navigation__checkbox {
   display: none; }
@@ -577,11 +645,11 @@ body {
 
 .navigation__list {
   left: 50%;
-  list-style: none;
   position: absolute;
-  text-align: center;
   top: 50%;
   transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
   width: 100%; }
 
 .navigation__item {
