--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -131,11 +131,8 @@
 
     // Back side styling
     &__cta {
-        left: 50%;
-        position: absolute;
+        @include absCenter;
         text-align: center;
-        top: 50%;
-        transform: translate(-50%, -50%);
         width: 90%;
     }
 
