--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -34,15 +34,13 @@
     }
 
     &__caption {
+        @include absCenter;
         backface-visibility: hidden;
         color: $colour-white;
         font-size: 1.7rem;
-        left: 50%;
         opacity: 0;
-        position: absolute;
         text-align: center;
         text-transform: uppercase;
-        top: 50%;
         transform: translate(-50%, 20%);
         transition: all .5s;
     }
