--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,10 +22,8 @@
     }  
     
     &__text-box {
-        left: 50%;
-        position: absolute;
+        @include absCenter;
         text-align: center;
         top: 40%;
-        transform: translate(-50%, -50%);
     }
 }
