--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -24,6 +24,7 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-horizontal: 6rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 
 // Misc
 $default-border-radius: 3px;
