--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,6 +6,7 @@
     position: relative;
 
     &__side {
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         border-radius: $default-border-radius;
         box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
@@ -150,5 +151,50 @@
     &__price-value {
         font-size: 6rem;
         font-weight: 100;
+    }
+
+
+    @include respond(tab-port) {
+        background-color: $colour-white;
+        border-radius: $default-border-radius;
+        box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
+        height: auto;
+
+        &__side {
+            box-shadow: none;
+            height: auto;
+            position: relative;
+
+            &--back {
+                -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+                transform: rotateY(0);
+            }
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+        &__details {
+            padding: 1rem 3rem;
+        }
+
+        &__cta {
+            left: 0;
+            padding: 7rem 4rem 4rem 4rem;
+            position: relative;
+            top: 0;
+            transform:  translate(0);
+            width: 100%;
+        }
+
+        &__price-box {
+            margin-bottom: 3rem;
+        }
+
+        &__price-value {
+            font-size: 4rem;
+        }
     }
 }
