--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -20,6 +20,10 @@
         transition: all .3s;
         width: 90%;
 
+        @include respond(tab-port) {
+            width: 100%;
+        }
+
         &:focus {
             border-bottom: 3px solid $colour-primary;
             box-shadow: 0 1rem 2rem rgba($colour-black, .1);
@@ -53,6 +57,11 @@
     &__radio-group {
         display: inline-block;
         width: 49%;
+
+        @include respond(tab-port) {
+            margin-bottom: 2rem;
+            width: 100%;
+        }
     }
 
     &__radio-label {
