--- a/sass/page/_home.scss
+++ b/sass/page/_home.scss
@@ -2,6 +2,10 @@
     background-color: $colour-grey-light-1;
     margin-top: -20vh;
     padding: 25rem 0;
+
+    @include respond(tab-port) {
+        padding: 20rem 0;
+    }
 }
 
 .section-features {
@@ -18,22 +22,38 @@
     & > * {
         transform: skewY(7deg);
     }
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-tours {
     background-color: $colour-grey-light-1;
     margin-top: -10rem;
     padding: 25rem 0 15rem 0;
+
+    @include respond(tab-port) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-stories {
     padding: 15rem 0;
     position: relative;
+
+    @include respond(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
     background-image: linear-gradient(to right bottom, $colour-primary-light, $colour-primary-dark);
-    padding: 15rem;
+    padding: 15rem 0;
+
+    @include respond(tab-port) {
+        padding: 10rem;
+    }
 }
 
 .book {
@@ -46,10 +66,31 @@
     border-radius: $default-border-radius;
     box-shadow: 0 1.5rem 4rem rgba($colour-black, .2);
     
-    height: 50rem;
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, 
+                            rgba($colour-white, .9) 0%, 
+                            rgba($colour-white, .9) 65%, 
+                            transparent 65%),
+        url(../img/nat-10.jpg);
+    }
+
+    @include respond(tab-port) {
+            background-image: linear-gradient(to right, 
+            rgba($colour-white, .9) 0%, 
+            rgba($colour-white, .9) 100%),
+        url(../img/nat-10.jpg);
+    }
 
     &__form {
         padding: 6rem;
         width: 50%;
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
